# qcn

./: Makefile.incl  README.md  aclocal.m4  build  build.mac  build_android_arm.sh  build_androidtc_arm.sh  build_libraries_arm.sh  config.h  config.h.in  configure.ac  configure.ac.android  configure.ac.old  configure.ac_android_arm  configure_android_arm  curl-build.mac  getboinc  libtool  vers  version.h
bzip2-1.0.6/: build.mac
client/linux64_build/: configure.linux64
client/mac_build/: qcn-Info.plist  qcn_graphics-Info.plist  qcnusb-Info.plist
client/mac_build/qcn.xcodeproj/: project.pbxproj
client/main/: Makefile.am  Makefile.am_android_arm  Makefile.in_android_arm  Makefile_android_arm  build_android_arm.sh  define.h  main.cpp  main.h  qcn_thread_sensor_loop.cpp  qcn_thread_sensor_util.cpp  qcn_thread_sensor_util.h  qcn_thread_time.cpp  qcndemo.cpp
client/onavi_smsdev/: Makefile  csensor.cpp  csensor.h  csensor_linux_usb_onavi.cpp  csensor_linux_usb_onavi.h  main.cpp
client/qcnlive/: Info.plist  Makefile.mac  QCNLive.vcxproj  moc_dlgmakequake.cpp  moc_dlgsettings.cpp  moc_myframe.cpp  moc_qcnopenglwidget.cpp  moc_qcnqt.cpp  myframe.cpp  qcnqt.cpp
client/qcnlive/QCNLive.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
client/qcnusb/install/: qcnusb
client/raspi_smsdev/: Makefile  balogjp_loop.smsExecute  csensor.cpp  csensor.h  define.h  main.cpp
client/sensor/: csensor_android_built_in.cpp  csensor_android_built_in.h  csensor_mac_usb_jw.cpp
client/util/: qcn_util.cpp
client/win_build/: boinc_lib.vcxproj  boinc_lib.vcxproj.filters  qcn.sln  qcn_client.vcxproj  setwinver.cpp
curl-7.25.0/: Makefile
curl-7.34.0/: Makefile  build.mac  config.status  curl-build.mac  curl-config  libcurl.pc  libtool
curl-7.34.0/docs/: Makefile
curl-7.34.0/docs/examples/: Makefile
curl-7.34.0/docs/libcurl/: Makefile
curl-7.34.0/include/: Makefile
curl-7.34.0/include/curl/: Makefile  curl.h
curl-7.34.0/lib/: Makefile  curl_config.h  curl_setup.h
curl-7.34.0/lib/.deps/: curl-nonblock.Po  curl-rawstr.Po  curl-strdup.Po  curl-strtoofft.Po  libcurl_la-amigaos.Plo  libcurl_la-asyn-ares.Plo  libcurl_la-asyn-thread.Plo  libcurl_la-axtls.Plo  libcurl_la-base64.Plo  libcurl_la-bundles.Plo  libcurl_la-conncache.Plo  libcurl_la-connect.Plo  libcurl_la-content_encoding.Plo  libcurl_la-cookie.Plo  libcurl_la-curl_addrinfo.Plo  libcurl_la-curl_darwinssl.Plo  libcurl_la-curl_fnmatch.Plo  libcurl_la-curl_gethostname.Plo  libcurl_la-curl_gssapi.Plo  libcurl_la-curl_memrchr.Plo  libcurl_la-curl_multibyte.Plo  libcurl_la-curl_ntlm.Plo  libcurl_la-curl_ntlm_core.Plo  libcurl_la-curl_ntlm_msgs.Plo  libcurl_la-curl_ntlm_wb.Plo  libcurl_la-curl_rtmp.Plo  libcurl_la-curl_sasl.Plo  libcurl_la-curl_schannel.Plo  libcurl_la-curl_sspi.Plo  libcurl_la-curl_threads.Plo  libcurl_la-cyassl.Plo  libcurl_la-dict.Plo  libcurl_la-dotdot.Plo  libcurl_la-easy.Plo  libcurl_la-escape.Plo  libcurl_la-file.Plo  libcurl_la-fileinfo.Plo  libcurl_la-formdata.Plo  libcurl_la-ftp.Plo  libcurl_la-ftplistparser.Plo  (+76 more)
curl-7.34.0/src/: Makefile
curl-7.34.0/src/.deps/: curl-tool_binmode.Po  curl-tool_bname.Po  curl-tool_cb_dbg.Po  curl-tool_cb_hdr.Po  curl-tool_cb_prg.Po  curl-tool_cb_rea.Po  curl-tool_cb_see.Po  curl-tool_cb_wrt.Po  curl-tool_cfgable.Po  curl-tool_convert.Po  curl-tool_dirhie.Po  curl-tool_doswin.Po  curl-tool_easysrc.Po  curl-tool_formparse.Po  curl-tool_getparam.Po  (+23 more)
curl-7.34.0/tests/: Makefile  configurehelp.pm
freetype-2.4.6/: build.mac
freetype-2.4.6/objs/: libfreetype.la
freetype-2.5.2/: build.mac
freetype-2.5.2/objs/: libfreetype.la
ftgl-2.1.3/: Makefile  build.mac  config.status  libtool
ftgl-2.1.3/docs/: Makefile
ftgl-2.1.3/src/: Makefile
m4/: Makefile  Makefile.in
ntp-4.2.4p7/: COPYRIGHT  configure  configure_android_arm
ntp-4.2.4p7/ntpdate/: ntpdate.h
ntp-4.2.4p7/sntp/: configure
ntp-4.2.6p5/: build.mac  build.sh  build_android_arm.sh
ntp-4.2.6p5/include/: ntp_crypto.h  ntpd.h
ntp-4.2.6p5/libntp/: Makefile.am  Makefile.in  a_md5encrypt.c  adjtime.c  authreadkeys.c  ssl_init.c  statestr.c
ntp-4.2.6p5/ntpdate/: Makefile.in  ntpdate.c  ntpdate.h  ntpdate.test.txt
ntp-4.2.6p5/sntp/: version.texi
server/: backupdb
server/autotrigger/: procupload.py
server/config/: archive.sh  backupdb-archive.sh  backupdb.sh  backupweb.sh  boinc_restart  config.xml  continual_config.xml  httpd  httpd.conf  my.cnf  my.cnf.slave  my.cnf.trigmem  project_files.xml
server/html/: syncserver
server/jfl/: trigmon.h
server/procjob/: procdownloadjob.py
server/quake/: parse-usgs-json.py
server/sql/: 20140823_sf_quake.sql  archive.sh  current_users.sql  do_stats.py  duplicate_trigger_removal.sql  qcn_schema.sql  scedc.py  trickle_down_abort.sql
server/trigger/: qcn_trigger.cpp
server/trigmonitor/: Crust2.cpp  Crust2.h  Crust2.os  Crust2_wrap.os  Makefile  QCN.cpp  QCN.h  QCN.os  QCNBounds.cpp  QCNBounds.h  QCNBounds.os  QCNBounds_wrap.os  QCNEvent.cpp  QCNEvent.h  QCNEvent.os  QCNEvent_wrap.os  QCNSqlQuery.cpp  QCNSqlQuery.h  QCNTrigger.cpp  QCNTrigger.h  QCNTrigger.os  QCNTrigger_wrap.os  QCN_wrap.os  qcn.pro  test.cpp
zlib-1.2.5/: Makefile  build.mac  gzread.c  gzwrite.c
zlib-1.2.8/: Makefile  Makefile.in  build.mac
(+48 files in other folders)
